<?xml version="1.0"?>
<package format="2">
  <name>line_rot_slam</name>
  <version>0.0.0</version>
  <description>The line_rot_slam package</description>
  <maintainer email="zip@todo.todo">Alpaca-zip</maintainer>
  <license>Apache 2.0</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <export>
  </export>
</package>
