<?xml version="1.0"?>
<package format="2">
  <name>line_rot_slam</name>
  <version>0.0.0</version>
  <description>The line_rot_slam package</description>
  <maintainer email="zip@todo.todo">Alpaca-zip</maintainer>
  <license>Apache 2.0</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <exec_depend>gazebo_ros</exec_depend>
  <export>
  </export>
</package>
