<?xml version="1.0"?>
<package format="2">
  <name>line_rot_slam</name>
  <version>0.0.0</version>
  <description>The line_rot_slam package</description>
  <maintainer email="zip@todo.todo">Alpaca-zip</maintainer>
  <license>Apache 2.0</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>nodelet</depend>
  <depend>pluginlib</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <depend>actionlib</depend>
  <depend>actionlib_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>pcl_ros</depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>image_view</exec_depend>
  <exec_depend>xterm</exec_depend>
  <export>
    <gazebo_ros gazebo_model_path="${prefix}/models"/>
    <nodelet plugin="${prefix}/nodelet_plugins.xml"/>
  </export>
</package>
